--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>Dentist</title>
+		<title>Zoe Dental</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
 			<!--
@@ -90,7 +90,7 @@
 				  					<span class="lnr lnr-phone-handset"></span>
 				  				</a> -->
 				  				<a class="icons" href="mailto:support@colorlib.com">
-				  					<span class="lnr lnr-envelope"></span>
+				  					<a class="btns" href="tel:+233 050 580 6719">+233505806719</a>
 				  				</a>		
 				  			</div>
 				  		</div>			  					
